--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.3.0",
@@ -61,7 +62,7 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-ember": "^5.0.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-prettier": "2.6.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "loader.js": "^4.2.3",
