--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.3.0",
+    "ember-cli-chai": "^0.4.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-qunit": "^4.3.2",
+    "ember-cli-mocha": "https://github.com/ember-cli/ember-cli-mocha.git#64d8742",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
@@ -67,8 +68,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "loader.js": "^4.2.3",
-    "prettier": "^1.13.7",
-    "qunit-dom": "^0.6.2"
+    "prettier": "^1.13.7"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
