--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "loader.js": "^4.2.3",
-    "prettier": "^1.13.7"
+    "prettier": "^1.13.7",
+    "sinon-chai": "^3.2.0"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
