--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "ember-cli-babel": "^6.6.0",
     "react": "^16.4.1",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "semver": "^5.6.0"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
