--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ env:
     - EMBER_TRY_SCENARIO=ember-lts-2.18
     - EMBER_TRY_SCENARIO=ember-3.0
     - EMBER_TRY_SCENARIO=ember-3.4
+    - EMBER_TRY_SCENARIO=ember-3.6
     - EMBER_TRY_SCENARIO=ember-release
     - EMBER_TRY_SCENARIO=ember-beta
     - EMBER_TRY_SCENARIO=ember-canary
