--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "ember-cli": "~3.4.1",
     "ember-cli-chai": "^0.5.0",
     "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-eslint": "^4.2.1",
+    "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.8.2",
@@ -73,7 +73,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-ember": "^6.3.0",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "loader.js": "^4.2.3",
