--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-ember": "^6.3.0",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "2.6.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "loader.js": "^4.2.3",
