--- a/package.json
+++ b/package.json
@@ -39,35 +39,36 @@
     ]
   },
   "dependencies": {
-    "ember-auto-import": "^1.2.13",
-    "ember-cli-babel": "^6.6.0",
+    "ember-auto-import": "^1.2.21",
+    "ember-cli-babel": "^7.1.2",
     "react": "^16.4.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "semver": "^5.6.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
+    "@ember/jquery": "^0.6.0",
+    "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-cli": "~3.4.1",
+    "ember-cli": "~3.8.1",
     "ember-cli-chai": "^0.5.0",
-    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-mocha": "https://github.com/ember-cli/ember-cli-mocha.git#64d8742",
-    "ember-cli-shims": "^1.2.0",
-    "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
-    "ember-disable-prototype-extensions": "^1.1.2",
+    "ember-cli-sri": "^2.1.1",
+    "ember-cli-uglify": "^2.1.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-resolver": "^5.0.1",
     "ember-sinon": "^2.1.0",
-    "ember-source": "~3.4.0",
-    "ember-source-channel-url": "^1.0.1",
+    "ember-source": "~3.8.0",
+    "ember-source-channel-url": "^1.1.0",
     "ember-try": "^1.0.0",
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
@@ -76,7 +77,7 @@
     "eslint-plugin-prettier": "2.6.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
-    "loader.js": "^4.2.3",
+    "loader.js": "^4.7.0",
     "prettier": "^1.16.4",
     "sinon-chai": "^3.2.0"
   },
