Upgrade ember-mocha

--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-mocha": "https://github.com/ember-cli/ember-cli-mocha.git#64d8742",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-mocha": "^0.14.0",
     "ember-resolver": "^5.0.1",
     "ember-sinon": "^2.1.0",
     "ember-source": "~3.8.0",
