--- a/package.json
+++ b/package.json
@@ -47,29 +47,31 @@
     "semver": "^5.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@ember/jquery": "^0.6.0",
-    "@ember/optional-features": "^0.6.3",
+    "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
+    "chai": "^4.2.0",
     "ember-cli": "~3.8.1",
     "ember-cli-chai": "^0.5.0",
     "ember-cli-dependency-checker": "^3.1.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
-    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
+    "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.1.0",
+    "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-mocha": "^0.14.0",
-    "ember-resolver": "^5.0.1",
-    "ember-sinon": "^2.1.0",
+    "ember-resolver": "^5.1.3",
+    "ember-sinon": "^3.1.0",
     "ember-source": "~3.8.0",
     "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^1.0.0",
+    "ember-try": "^1.1.0",
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-ember": "^6.3.0",
@@ -79,7 +81,8 @@
     "lint-staged": "^8.1.5",
     "loader.js": "^4.7.0",
     "prettier": "^1.16.4",
-    "sinon-chai": "^3.2.0"
+    "sinon": "^7.3.0",
+    "sinon-chai": "^3.3.0"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
